tests/fail/pub_api_exposed_raw_ptr.tk
pub fn foo(ptr: *i32) -> void {
}

fn main() -> i32 {
    return 0
}
